--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = ".next"
 
 [build.environment]
   NODE_VERSION = "20"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NPM_FLAGS = "--include=optional"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-
