--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "lightningcss": "^1.30.2",
     "next": "16.0.0",
     "postcss": "^8.5.6",
     "react": "19.2.0",
